--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /JobSeekerPresentationLayer/build/
 /JobSeekerPresentationLayer/nbproject/private/
 /JobSeekerBLLayer/build/
+JobSeekerDataLayer/nbproject/
