--- a/JobSeekerDataLayer/nbproject/private/private.properties
+++ b/JobSeekerDataLayer/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Shiyanrox\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat70.properties
-j2ee.server.home=C:/xampp/www/tomcat
-j2ee.server.instance=tomcat70:home=C:\\xampp\\www\\tomcat
-user.properties.file=C:\\Users\\Shiyanrox\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+deploy.ant.properties.file=C:\\Users\\gtmtm\\AppData\\Roaming\\NetBeans\\8.1\\tomcat70.properties
+j2ee.server.home=E:/DEVELOPMENT/xampp/tomcat
+j2ee.server.instance=tomcat70:home=E:\\DEVELOPMENT\\xampp\\tomcat
+user.properties.file=C:\\Users\\gtmtm\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
